--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "bootstrap-vue": "^0.12.0",
+    "vee-validate": "^2.0.0-beta.25",
     "vue": "^2.2.2",
     "vue-router": "^2.2.0"
   },
