--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "bootstrap-vue": "^0.12.0",
+    "font-awesome": "^4.7.0",
     "vee-validate": "^2.0.0-beta.25",
     "vue": "^2.2.2",
     "vue-router": "^2.2.0"
